# wirvsvirus

./: .gitignore  LICENSE  README.md
data/: python_example_1.txt
demo/: fast.csv  slow.csv  slow_config.toml
src/pansim/: Cargo.toml  Config.toml  run.sh  visualization.py
src/pansim-py/: README.md  config.toml  pansim  setup.py
src/pansim-py/libpansim/: run.py  sim.py
src/pansim/libpansim/: pop.py
src/pansim/output/: 1584896590.csv  1584896590_config.toml  1584897226.csv  1584897226_config.toml  1584898240_config.toml  1584899160.csv  1584899160_config.toml
src/pansim/src/: config.rs  lib.rs  main.rs  population.rs
src/panvis/: barchart.js  data.csv  linechart.js  main.js  mainWindow.html  package-lock.json  package.json  simulate.js  styles.css
src/simulation/: config.toml
