[package]
name = "pansim"
version = "0.1.0"
authors = ["Franz <franz@miltz.me>"]
edition = "2018"

[lib]
name = "pansimlib"
path = "src/lib.rs"

[[bin]]
name = "pansim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_derive = "1.0.105"
serde = "1.0.105"
toml = "0.5"
rand = "0.7"
